# rom24

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  TCP_INGRESS_SETUP.md  Tiltfile  UV_MIGRATION.md  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml  python-publish.yml
argocd/: ingress-nginx-tcp-config.yaml  kustomization.yaml  pyrom-app-of-apps.yaml  pyrom-applicationset.yaml
k8s/: README.md
k8s/base/: kustomization.yaml  pyrom-configmap.yaml  pyrom-deployment.yaml  pyrom-ingress.yaml  pyrom-pvc.yaml  pyrom-service.yaml
k8s/ingress-nginx/: tcp-services-configmap.yaml
k8s/overlays/dev/: ingress-patch.yaml  kustomization.yaml  namespace.yaml  pyrom-configmap.yaml
k8s/overlays/local/: kustomization.yaml  namespace.yaml  pyrom-configmap.yaml  pyrom-pvc-patch.yaml
k8s/overlays/prod/: kustomization.yaml  namespace.yaml  pyrom-configmap.yaml
k8s/overlays/staging/: ingress-patch.yaml  kustomization.yaml  namespace.yaml  pyrom-configmap.yaml
src/rom24/: db.py  game_utils.py  instance.py  settings.py  sys_utils.py
src/rom24/miniboa/: telnet.py
