[project]
name = "rom24"
version = "0.0.1.alpha2"
description = "ROM 2.4 Python MUD Server - A modern Python implementation of the classic ROM MUD"
readme = "README.md"
authors = [
    { name = "Micheal Taylor", email = "bubthegreat@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "ty>=0.0.14",
]

[project.scripts]
rom24 = "rom24.pyom:pyom"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rom24"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ty]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=rom24 --cov-report=term-missing"
